Changing list.of method in LessonConfigure